// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"InputLabel" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <label
    className="css-evu342-Label"
  >
    Label
  </label>
</div>
`;

exports[`"InputLabel" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <label
    className="css-evu342-Label"
  >
    Label
  </label>
</div>
`;

exports[`"LabelLink" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <a
    className="css-yrhris-LabelLink"
  >
    LabelLink
  </a>
</div>
`;

exports[`"LabelLink" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <a
    className="css-1jufn2v-LabelLink"
  >
    LabelLink
  </a>
</div>
`;
